objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Detail__c</fullName>
        <label>Additional Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Insurance_Percent__c</fullName>
        <label>Alternate Insurance Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Alternate_Insurance__c</fullName>
        <label>Alternate Insurance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCIP</fullName>
                </value>
                <value>
                    <fullName>OCIP</fullName>
                </value>
                <value>
                    <fullName>Wrap-Up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Rider__c</fullName>
        <label>Alternate Rider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accupuncture</fullName>
                </value>
                <value>
                    <fullName>Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Massage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Payroll__c</fullName>
        <label>Annual Payroll</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorization_Date__c</fullName>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorized_Name__c</fullName>
        <label>Authorized Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Title__c</fullName>
        <label>Authorized Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Activating_Event_1__c</fullName>
        <label>COBRA Activating Event 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COBRA_Activating_Event_2__c</fullName>
        <label>COBRA Activating Event 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COBRA_Activating_Event_3__c</fullName>
        <label>COBRA Activating Event 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COBRA_Activating_Event_Date_1__c</fullName>
        <label>COBRA Activating Event Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Activating_Event_Date_2__c</fullName>
        <label>COBRA Activating Event Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Activating_Event_Date_3__c</fullName>
        <label>COBRA Activating Event Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Active_Participant_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COBRA Active Participant 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA_Active_Participant_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COBRA Active Participant 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA_Active_Participant_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COBRA Active Participant 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA_Additional_Participants__c</fullName>
        <label>COBRA Additional Participants</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>COBRA_Coverage_Level_1__c</fullName>
        <label>COBRA Coverage Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employee+Spouse</fullName>
                </value>
                <value>
                    <fullName>Employee+Child</fullName>
                </value>
                <value>
                    <fullName>Emoloyee+Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA_Coverage_Level_2__c</fullName>
        <label>COBRA Coverage Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employee+Spouse</fullName>
                </value>
                <value>
                    <fullName>Employee+Child</fullName>
                </value>
                <value>
                    <fullName>Emoloyee+Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA_Coverage_Level_3__c</fullName>
        <label>COBRA Coverage Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employee+Spouse</fullName>
                </value>
                <value>
                    <fullName>Employee+Child</fullName>
                </value>
                <value>
                    <fullName>Emoloyee+Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA_Effective_Date_1__c</fullName>
        <label>COBRA Effective Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Effective_Date_2__c</fullName>
        <label>COBRA Effective Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Effective_Date_3__c</fullName>
        <label>COBRA Effective Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Participant_DOB_1__c</fullName>
        <label>COBRA Participant DOB 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Participant_DOB_2__c</fullName>
        <label>COBRA Participant DOB 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Participant_DOB_3__c</fullName>
        <label>COBRA Participant DOB 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COBRA_Participant_Name_1__c</fullName>
        <label>COBRA Participant Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Participant_Name_2__c</fullName>
        <label>COBRA Participant Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Participant_Name_3__c</fullName>
        <label>COBRA Participant Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_YesNo__c</fullName>
        <label>COBRA (Yes/No)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COBRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clerical_Staff_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clerical Staff Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Vehicles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Vehicles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractor_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractors License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Contribution_Employee_Only__c</fullName>
        <label>Current Contribution Employee Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contribution_Employee_and_Childr__c</fullName>
        <label>Current Contribution Employee and Childr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contribution_Employee_and_Family__c</fullName>
        <label>Current Contribution Employee and Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contribution_Employee_and_Spouse__c</fullName>
        <label>Current Contribution Employee and Spouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_HC_Invoice_Inactive_Employees__c</fullName>
        <label>Current HC Invoice Inactive Employees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_HC_Invoice__c</fullName>
        <label>Current HC Invoice</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Current_WC_Attachment__c</fullName>
        <label>Current WC Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Add_Healthcare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Add Healthcare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Provider__c</fullName>
        <label>Dental Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>HMSA</fullName>
                </value>
                <value>
                    <fullName>HDS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_Business__c</fullName>
        <label>Description of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPLI_Cost__c</fullName>
        <label>EPLI Cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPLI_Coverage__c</fullName>
        <label>EPLI Coverage</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPLI_YesNo__c</fullName>
        <label>EPLI (Yes/No)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Locations__c</fullName>
        <label>Employee Locations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                    <default>true</default>
                    <label>Hawaii</label>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employees_CSO__c</fullName>
        <label>Employees CSO</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_FT__c</fullName>
        <label>Employees FT</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_HC_Eligible__c</fullName>
        <label>Employees HC Eligible</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_HC_Ineligible_Casual__c</fullName>
        <label>Employees HC Ineligible Casual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_HC_Ineligible_OnCall__c</fullName>
        <label>Employees HC Ineligible OnCall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_HC_Ineligible_Regular__c</fullName>
        <label>Employees HC Ineligible Regular</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_HC_Ineligible_Seasonal__c</fullName>
        <label>Employees HC Ineligible Seasonal</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_HC_Ineligible__c</fullName>
        <formula>Employees_HC_Ineligible_Regular__c + Employees_HC_Ineligible_Casual__c + Employees_HC_Ineligible_Seasonal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employees HC Ineligible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_HC_Planned__c</fullName>
        <formula>Employees_HC_Eligible__c + Employees_HC_Ineligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employees HC Planned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_PT__c</fullName>
        <label>Employees PT</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excluded_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excluded Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excluded_Employees_on_Payroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excluded Employees on Payroll?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusion_Detail__c</fullName>
        <label>Exclusion Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Pay__c</fullName>
        <label>Frequency of Pay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every 2 Weeks</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly: 5th and 20th</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly: 7th and 22nd</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly: Other</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ground_Transportation_DOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Transportation DOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ground_Transportation_Employee_Max__c</fullName>
        <label>Ground Transportation Employee Max</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ground_Transportation_Frequency__c</fullName>
        <label>Ground Transportation Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ground_Transportation_Vehicle_Type__c</fullName>
        <label>Ground Transportation Vehicle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ground_Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HC_Employees_On_Leave_Attachment__c</fullName>
        <label>HC Employees On Leave Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HC_Employees_On_Leave__c</fullName>
        <label>HC Employees On Leave</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No, employees or dependents currently on leave</fullName>
                </value>
                <value>
                    <fullName>Yes, at least 1 employee or dependent is on leave due to a long-term or temporary disability that impairs their ability to do their job</fullName>
                </value>
                <value>
                    <fullName>Yes, at least 1 employee or dependent is on leave due to a workers' compensation claim that impairs their ability to do their job</fullName>
                </value>
                <value>
                    <fullName>Yes, at least 1 employee or dependent is on leave due to a physical disability that impairs their ability to do their job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Leave_Disability_1__c</fullName>
        <label>HC Leave Disability 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Leave_Disability_2__c</fullName>
        <label>HC Leave Disability 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Leave_Disability_3__c</fullName>
        <label>HC Leave Disability 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Leave_Name_1__c</fullName>
        <label>HC Leave Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Leave_Name_2__c</fullName>
        <label>HC Leave Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Leave_Name_3__c</fullName>
        <label>HC Leave Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Leave_Qualifying_Event_1__c</fullName>
        <label>HC Leave Qualifying Event 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maternity / Paternity Leave</fullName>
                </value>
                <value>
                    <fullName>Long Term Disability</fullName>
                </value>
                <value>
                    <fullName>Temporary / Short Term Disability</fullName>
                </value>
                <value>
                    <fullName>Workers' Compensation Claim</fullName>
                </value>
                <value>
                    <fullName>Physical Disability</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Leave_Qualifying_Event_2__c</fullName>
        <label>HC Leave Qualifying Event 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maternity / Paternity Leave</fullName>
                </value>
                <value>
                    <fullName>Long Term Disability</fullName>
                </value>
                <value>
                    <fullName>Temporary / Short Term Disability</fullName>
                </value>
                <value>
                    <fullName>Workers' Compensation Claim</fullName>
                </value>
                <value>
                    <fullName>Physical Disability</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Leave_Qualifying_Event_3__c</fullName>
        <label>HC Leave Qualifying Event 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maternity / Paternity Leave</fullName>
                </value>
                <value>
                    <fullName>Long Term Disability</fullName>
                </value>
                <value>
                    <fullName>Temporary / Short Term Disability</fullName>
                </value>
                <value>
                    <fullName>Workers' Compensation Claim</fullName>
                </value>
                <value>
                    <fullName>Physical Disability</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hazardous_Materials_Detail__c</fullName>
        <label>Hazardous Materials Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hazardous_Materials_Percent__c</fullName>
        <label>Hazardous Materials Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hazardous_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Illness_Additional_Participants__c</fullName>
        <label>Illness Additional Participants</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor_Fees__c</fullName>
        <label>Incumbent Competitor Fees</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor__c</fullName>
        <label>Incumbent Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Paychex</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Condition_1__c</fullName>
        <label>Individual Condition 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIDS or HIV Positive</fullName>
                </value>
                <value>
                    <fullName>Arthritis</fullName>
                </value>
                <value>
                    <fullName>Back Disorder</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Heart Disease</fullName>
                </value>
                <value>
                    <fullName>Kidney Disorder</fullName>
                </value>
                <value>
                    <fullName>Liver Disease</fullName>
                </value>
                <value>
                    <fullName>Mental Illness</fullName>
                </value>
                <value>
                    <fullName>Muscular Disorder</fullName>
                </value>
                <value>
                    <fullName>Nervous System Disorder</fullName>
                </value>
                <value>
                    <fullName>Respiratory Disease</fullName>
                </value>
                <value>
                    <fullName>Stroke</fullName>
                </value>
                <value>
                    <fullName>Substance Dependency</fullName>
                </value>
                <value>
                    <fullName>Transplants</fullName>
                </value>
                <value>
                    <fullName>Tumor</fullName>
                </value>
                <value>
                    <fullName>Other Serious Condition(s)</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual_Condition_2__c</fullName>
        <label>Individual Condition 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIDS or HIV Positive</fullName>
                </value>
                <value>
                    <fullName>Arthritis</fullName>
                </value>
                <value>
                    <fullName>Back Disorder</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Heart Disease</fullName>
                </value>
                <value>
                    <fullName>Kidney Disorder</fullName>
                </value>
                <value>
                    <fullName>Liver Disease</fullName>
                </value>
                <value>
                    <fullName>Mental Illness</fullName>
                </value>
                <value>
                    <fullName>Muscular Disorder</fullName>
                </value>
                <value>
                    <fullName>Nervous System Disorder</fullName>
                </value>
                <value>
                    <fullName>Respiratory Disease</fullName>
                </value>
                <value>
                    <fullName>Stroke</fullName>
                </value>
                <value>
                    <fullName>Substance Dependency</fullName>
                </value>
                <value>
                    <fullName>Transplants</fullName>
                </value>
                <value>
                    <fullName>Tumor</fullName>
                </value>
                <value>
                    <fullName>Other Serious Condition(s)</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>